# RasputinCLib

./: CMakeLists.txt  main.c
src/list/: CMakeLists.txt  rasp_hash.c  rasp_hash.h
src/memory/: CMakeLists.txt  rasp_mem.c  rasp_mem.h  rasp_mem_array.c
test/: CMakeLists.txt  test_rasp_mem.c  test_runner.c
